# kahin-backend

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  Dockerfile  WEBSOCKET_EVENTS.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  jest.config.js  package-lock.json  package.json
.claude/commands/: api-doc.md  deploy-check.md  migration.md  new-feature.md  test-gen.md
config/: database.js  redis.js  websocket.js
migrations/: 20251127-add-composite-indexes.sql  20251127-create-withdrawals-deposits.js  20251127-withdrawals-deposits.sql  add-advanced-order-types.js  add-category-column.sql  add-category-to-markets.js  add-contract-code-to-markets.js  add-enhanced-resolution-fields.js  add-featured-columns.js  add-market-contracts.js  add-market-pause-fields.js  add-messaging.js  add-multiple-choice-support.js  add-notifications.js  add-price-history.js  add-refresh-tokens.js  add-timestamps-to-all-tables.js  add-user-ban-fields.js  add-user-profile-fields.js  create-disputes.js  create-resolution-history.js  fix-order-price-nullable.js  fix-timestamp-defaults.js  run-market-pause-migration.js
rust-matching-engine/: Cargo.toml  IMPROVEMENTS.md  README.md
rust-matching-engine/src/: lib.rs  main.rs
scripts/: run-migration.js  start-with-migration.sh
src/: server.js
src/clob-engine/: index.js
src/controllers/: admin.controller.js  auth.controller.js  contract.controller.js  dev.controller.js  market.controller.js  message.controller.js  notification.controller.js  open.controller.js  option.controller.js  order.controller.js  (+7 more)
tests/: orders.test.js  setup.js
(+84 files in other folders)
